<resources>
    <string name="app_name">What To Eat</string>
    <string name="app_title">What To Eat</string>
    <string name="meals">Meals</string>
    <string name="generate_meals_list">Generate meals list</string>
    <string name="meals_show">What meals do you want to show?</string>
    <string name="meals_category">By category</string>
    <string name="meals_all">All</string>
    <string name="add_meal">Add meal</string>
    <string name="hint_name_meal">Meal name</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="save_meal">Save meal</string>
    <string name="hint_name_ingredient">Ingredient name</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_type">Type (ml, spoon etc.)</string>
    <string name="toast_no_name">No name given</string>
    <string name="toast_incomplete_ingredients">Not all ingredients are completed</string>
    <string name="toast_no_ingredients">There are no ingredients given</string>
    <string name="toast_name_exists">Given name already exists</string>
    <string name="add_meal_type">Add meal type</string>
    <string name="hint_name_meal_type">Meal type name</string>
    <string name="delete_question_ingredient">Are you sure to delete ingredient?</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="toast_cant_delete_ingredient">You can\'t delete all ingredients</string>
    <string name="generate_random">Generate random</string>
    <string name="generate_custom">Generate custom</string>
    <string name="saved">Saved</string>
    <string name="new_ingredient">New ingredient</string>
    <string name="type">Type</string>
    <string name="nothing_saved">There is nothing saved</string>
    <string name="allow_duplicates">Do you want to allow meal duplicates?</string>
    <string name="toast_meal_type_already_chosen">This meal type is already chosen</string>
    <string name="toast_meal_type_empty">This meal type is empty</string>
    <string name="generate_final">Generate</string>
    <string name="toast_meal_type_number_incorrect1">The amount given in</string>
    <string name="toast_meal_type_number_incorrect2">is incorrect</string>
    <string name="toast_no_meal_types">There are no meal types given</string>
    <string name="toast_no_meals">There are no meals given</string>
    <string name="save_meals">Save meals pack</string>
    <string name="get_ingredients_list">Get ingredients list</string>
    <string name="toast_successfully_saved">Successfully saved</string>
    <string name="hint_meal_pack_name">Meal pack name</string>
    <string name="delete_question">Are you sure?</string>
    <string name="hint_name">Name</string>
    <string name="shopping_list">Shopping list</string>
    <string name="delete_done">Delete checked</string>
    <string name="add_ingredients_to_shopping_list">Add ingredients to shopping list</string>
    <string name="toast_successfully_added_to_shopping_list">Successfully added to shopping list</string>
    <string name="no_meal_types">There are no meal types yet</string>
    <string name="try_to_add_meal_types">Try to add them in meals section</string>
    <string name="no_meals">There are no meals yet</string>

</resources>