<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.generation.GenerateMealsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/dustismo_bold"
            android:gravity="center"
            android:text="@string/allow_duplicates"
            android:textSize="25dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toBottomOf="@id/view2">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />

            <Button
                android:id="@+id/generate_meals_button_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="42.5"
                android:background="@drawable/button_background_red_light"
                android:fontFamily="@font/dustismo_bold"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textSize="22dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />

            <Button
                android:id="@+id/generate_meals_button_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="42.5"
                android:background="@drawable/button_background_red"
                android:fontFamily="@font/dustismo_bold"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textSize="22dip" />

        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/generate_meals_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.52"
            app:layout_constraintTop_toBottomOf="@id/view3"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/generate_meals_add"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardBackgroundColor="@color/colorRed"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_meal_type"
                android:gravity="center"
                android:textColor="@color/colorBackground"
                android:textSize="30dip"
                android:fontFamily="@font/dustismo_bold"/>


        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>