<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.meal.MealsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="center|top"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground">


                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dustismo_bold"
                    android:gravity="center"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/meals_show"
                    android:textSize="35dip"
                    app:layout_constraintTop_toBottomOf="@id/view3" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.17"
                    app:layout_constraintTop_toBottomOf="@id/text_view_title" />

                <Button
                    android:id="@+id/meals_button_category"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/button_background_red"
                    android:fontFamily="@font/dustismo_bold"
                    android:text="@string/meals_category"
                    android:textColor="@color/colorBackground"
                    android:textSize="25dip"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.075"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view"
                    app:layout_constraintWidth_percent="0.7" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.04"
                    app:layout_constraintTop_toBottomOf="@id/meals_button_category" />

                <Button
                    android:id="@+id/meals_button_all"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/button_background_red_dark"
                    android:fontFamily="@font/dustismo_bold"
                    android:text="@string/meals_all"
                    android:textColor="@color/colorBackground"
                    android:textSize="25dip"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.075"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view2"
                    app:layout_constraintWidth_percent="0.7" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>