<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/row_ingredient_card"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardBackgroundColor="@color/colorRedLightLight"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/colorRedDarkDark"
        app:strokeWidth="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/row_ingredient_delete"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_delete"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="100"
                android:orientation="vertical">

                <EditText
                    android:background="@android:color/transparent"
                    android:id="@+id/row_ingredient_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="40"
                    android:hint="@string/hint_name_ingredient"
                    android:gravity="center"
                    android:textSize="25dip"
                    android:layout_marginEnd="35dp"
                    android:textColor="@color/colorRedDarkDark"
                    android:fontFamily="@font/dustismo_bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="60"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5" />

                    <EditText
                        android:id="@+id/row_ingredient_amount"
                        android:layout_width="0dp"
                        android:background="@android:color/transparent"
                        android:layout_height="match_parent"
                        android:layout_weight="40"
                        android:hint="@string/hint_amount"
                        android:gravity="center"
                        android:textSize="25dip"
                        android:textColor="@color/colorRedDarkDark"
                        android:fontFamily="@font/dustismo_bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5" />

                    <EditText
                        android:id="@+id/row_ingredient_type"
                        android:layout_width="0dp"
                        android:background="@android:color/transparent"
                        android:layout_height="match_parent"
                        android:layout_weight="45"
                        android:hint="@string/hint_type"
                        android:gravity="center"
                        android:textSize="25dip"
                        android:textColor="@color/colorRedDarkDark"
                        android:fontFamily="@font/dustismo_bold" />
                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>