<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/row_meal_extended_card"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardBackgroundColor="@color/colorRedLight"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/colorRedDarkDark"
        app:strokeWidth="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row_meal_extended_constraint_normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row_meal_extended_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center"
                android:textColor="@color/colorBackground"
                android:textSize="25dip"
                tools:text="Przykładowa nazwa" />

            <ImageView
                android:id="@+id/row_meal_extended_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row_meal_extended_constraint_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center"
                android:text="@string/delete_question"
                android:textSize="27dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                android:weightSum="100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.4">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />

                <Button
                    android:id="@+id/row_meal_extended_yes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="42.5"
                    android:background="@drawable/button_background_red"
                    android:fontFamily="@font/dustismo_bold"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBackground"
                    android:textSize="22dip" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />

                <Button
                    android:id="@+id/row_meal_extended_no"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="42.5"
                    android:background="@drawable/button_background_white"
                    android:fontFamily="@font/dustismo_bold"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/colorRed"
                    android:textSize="22dip" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>